# lsimg

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  main.py  pyproject.toml
scripts/: install.sh  release.sh
src/lsimg/: app.py  cli.py  core.py  encoder.py  version.py
tests/: encoder_test.py  test_app.py  test_cli.py  test_core.py
