[tool.poetry]
name = "lsimg"
version = "0.2.0"
description = "lsimg is \"ls\" command for images, displaying images in a directory."
authors = ["ptrhng <peter@ptrhng.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.4.9"

[tool.poetry.scripts]
lsimg = "lsimg.cli:main"

[tool.mypy]
files = "src,tests"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
